Fix LanguageTool build guide tables